--- a/index.html
+++ b/index.html
@@ -91,10 +91,6 @@
             </div>
         </div>
 
-        <div class="img_group">
-            <img src="./imgs/group21.png" alt="group">
-        </div>
-
         <div class="img_hero">
             <img src="./imgs/img3.png" alt="ofis">
         </div>
@@ -160,8 +156,7 @@
                     </a>
                 </div>
 
-                <div class="suggestions 
-                disappearing">
+                <div class="suggestions">
                     <div class="suggestion">
                         <img src="./imgs/img8.png" alt="cube">
                     </div>
@@ -173,8 +168,7 @@
                     </a>
                 </div>
 
-                <div class="suggestions 
-                disappearing">
+                <div class="suggestions">
                     <div class="suggestion">
                         <img src="imgs/img9.png" alt="cube">
                     </div>
@@ -279,27 +273,27 @@
 
             <div class="gallery">
 
-                <div class="one">
+                <div class="one gallery_img">
                     <img src="./imgs/img_10.png" alt="">
                 </div>
 
-                <div class="one">
+                <div class="one gallery_img">
                     <img src="./imgs/img_11.png" alt="">
                 </div>
 
-                <div class="two">
+                <div class="two gallery_img">
                     <img src="./imgs/img_12.png" alt="">
                 </div>
 
-                <div class="three">
+                <div class="three gallery_img">
                     <img src="./imgs/img_13.png" alt="">
                 </div>
 
-                <div class="four">
+                <div class="four gallery_img">
                     <img src="./imgs/img_14.png" alt="">
                 </div>
 
-                <div class="five">
+                <div class="five gallery_img">
                     <img src="./imgs/img_15.png" alt="">
                 </div>
 
