--- a/news.html
+++ b/news.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>slomay_mozg</title>
+    <title>Lorem</title>
     <link rel="stylesheet" href="./styles/index.css">
     <script src="https://kit.fontawesome.com/e9d412d8b6.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -60,4 +60,22 @@
         </div>
 
     </header>
+    <div class="banner_news container">
+        <span class="banner_span">
+            <a class="visited" href="#">Home</a>
+            >
+            <a class="this_page" href="#">News</a>
+        </span>
+
+        <h1>Lorem Ipsum is simply dummy text of the printing and.</h1>
+
+        <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </span>
+    </div>
+
+    <form class="search">
+        <input type="search" name="search" placeholder="Search">
+        <button class="btn_search">
+            <i class="fas fa-search"></i>
+        </button>
+    </form>
 </body>
