--- a/news.html
+++ b/news.html
@@ -63,7 +63,7 @@
     <div class="banner_news container">
         <span class="banner_span">
             <a class="visited" href="#">Home</a>
-            >
+            <span>></span>
             <a class="this_page" href="#">News</a>
         </span>
 
@@ -78,4 +78,228 @@
             <i class="fas fa-search"></i>
         </button>
     </form>
+
+    <div class="container news">
+        <div class="side left">
+            <div class="thematic">
+
+                <div class="thematic_img">
+                    <img src="imgs\img_new_1.png" alt="img">
+                </div>
+
+                <button class="thematic_btn">John smash</button>
+                <span>.5min</span>
+
+                <h3 class="title_news">Lorem Ipsum is simply dummy text dummy text </h3>
+
+                <p class="article_text">
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and scrambled it to make a type specimen book. It has survived not only five centuries,
+                </p>
+
+                <p class="article_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+
+            </div>
+
+            <div class="thematic">
+
+                <div class="thematic_img">
+                    <img src="./imgs/img_new_9.png" alt="img">
+                </div>
+
+                <button class="thematic_btn">John smash</button>
+                <span>.5min</span>
+
+                <h3 class="title_news">Lorem Ipsum is simply dummy text dummy text </h3>
+
+                <p class="article_text">
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and scrambled it to make a type specimen book. It has survived not only five centuries,
+                </p>
+
+                <h4>Lorem Ipsum</h4>
+
+                <p class="article_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+            </div>
+        </div>
+
+        <div class="side right">
+            <div class="thematic_block">
+
+                <div class="thematic_bllock_img">
+                    <img src="./imgs/img_new_2.png" alt="tematic_img">
+                </div>
+
+                <div class="thematic_item">
+                    <button>John smash</button>
+                    <span>.5min</span>
+                    <h6>Lorem Ipsum is simply dummy text dummy text ?</h6>
+                </div>
+
+            </div>
+
+            <div class="thematic_block">
+
+                <div class="thematic_bllock_img">
+                    <img src="./imgs/img_new_3.png" alt="tematic_img">
+                </div>
+
+                <div class="thematic_item">
+                    <button>John smash</button>
+                    <span>.5min</span>
+                    <h6>Lorem Ipsum is simply dummy text dummy text ?</h6>
+                </div>
+
+            </div>
+
+            <div class="thematic_block">
+
+                <div class="thematic_bllock_img">
+                    <img src="./imgs/img_new_4.png" alt="tematic_img">
+                </div>
+
+                <div class="thematic_item">
+                    <button>John smash</button>
+                    <span>.5min</span>
+                    <h6>Lorem Ipsum is simply dummy text dummy text ?</h6>
+                </div>
+
+            </div>
+            <div class="thematic_block">
+
+                <div class="thematic_bllock_img">
+                    <img src="./imgs/img_new_5.png" alt="tematic_img">
+                </div>
+
+                <div class="thematic_item">
+                    <button>John smash</button>
+                    <span>.5min</span>
+                    <h6>Lorem Ipsum is simply dummy text dummy text ?</h6>
+                </div>
+
+            </div>
+
+            <div class="thematic_block">
+
+                <div class="thematic_bllock_img">
+                    <img src="./imgs/img_new_6.png" alt="tematic_img">
+                </div>
+
+                <div class="thematic_item">
+                    <button>John smash</button>
+                    <span>.5min</span>
+                    <h6>Lorem Ipsum is simply dummy text dummy text ?</h6>
+                </div>
+
+            </div>
+
+            <div class="thematic_block">
+
+                <div class="thematic_bllock_img">
+                    <img src="./imgs/img_new_7.png" alt="tematic_img">
+                </div>
+
+                <div class="thematic_item">
+                    <button>John smash</button>
+                    <span>.5min</span>
+                    <h6>Lorem Ipsum is simply dummy text dummy text ?</h6>
+                </div>
+
+            </div>
+
+            <div class="thematic_block">
+
+                <div class="thematic_bllock_img">
+                    <img src="./imgs/img_new_8.png" alt="tematic_img">
+                </div>
+
+                <div class="thematic_item">
+                    <button>John smash</button>
+                    <span>.5min</span>
+                    <h6>Lorem Ipsum is simply dummy text dummy text ?</h6>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="black_part">
+            <div>
+                <h5>Stay in the loop</h5>
+                <p>Subscribe to receive the latest news and updates about TDA.
+                    We promise not to spam you!
+                </p>
+            </div>
+
+            <form class="emeil">
+                <input type="email" placeholder="Enter email address">
+                <button>Continue</button>
+            </form>
+        </div>
+    </div>
+
+    <footer>
+        <div class="container">
+            <div class="footer_part">
+                <a href="/">
+                    <img class="logo" src="./imgs/logo.png" alt="logo">
+                </a>
+
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+
+                <span>@Company.com</span>
+            </div>
+
+            <div class="about_us">
+                <span>About us</span>
+
+                <ul>
+                    <li>
+                        <a href="#">Company</a>
+                    </li>
+                    <li>
+                        <a href="#">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="#">Careers</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact us</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="about_us footer_part">
+                <span>Contact us</span>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+                <a href="tel:+90000000000">+9000 0000 000</a>
+            </div>
+
+            <div class="links_icons">
+                <a href="#">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+
+                <a href="#">
+                    <i class="fab fa-instagram"></i>
+                </a>
+
+                <a href="#">
+                    <i class="fab fa-twitter"></i>
+                </a>
+
+                <a href="#">
+                    <i class="fab fa-linkedin-in"></i>
+                </a>
+            </div>
+        </div>
+        <div class="end">
+            <span>Copyright ® 2021 Company All rights Rcerved</span>
+        </div>
+    </footer>
 </body>
+
+</html>
