--- a/news.html
+++ b/news.html
@@ -87,7 +87,7 @@
                     <img src="imgs\img_new_1.png" alt="img">
                 </div>
 
-                <button class="thematic_btn">John smash</button>
+                <a class="thematic_btn" href="#">John smash</a>
                 <span>.5min</span>
 
                 <h3 class="title_news">Lorem Ipsum is simply dummy text dummy text </h3>
@@ -108,7 +108,7 @@
                     <img src="./imgs/img_new_9.png" alt="img">
                 </div>
 
-                <button class="thematic_btn">John smash</button>
+                <a class="thematic_btn" href="#">John smash</a>
                 <span>.5min</span>
 
                 <h3 class="title_news">Lorem Ipsum is simply dummy text dummy text </h3>
@@ -128,12 +128,12 @@
         <div class="side right">
             <div class="thematic_block">
 
-                <div class="thematic_bllock_img">
+                <div class="thematic_block_img">
                     <img src="./imgs/img_new_2.png" alt="tematic_img">
                 </div>
 
                 <div class="thematic_item">
-                    <button>John smash</button>
+                    <a class="btn_black" href="#">John smash</a>
                     <span>.5min</span>
                     <h6>Lorem Ipsum is simply dummy text dummy text ?</h6>
                 </div>
@@ -142,12 +142,12 @@
 
             <div class="thematic_block">
 
-                <div class="thematic_bllock_img">
+                <div class="thematic_block_img">
                     <img src="./imgs/img_new_3.png" alt="tematic_img">
                 </div>
 
                 <div class="thematic_item">
-                    <button>John smash</button>
+                    <a class="btn_blue" href="#">John smash</a>
                     <span>.5min</span>
                     <h6>Lorem Ipsum is simply dummy text dummy text ?</h6>
                 </div>
@@ -156,12 +156,12 @@
 
             <div class="thematic_block">
 
-                <div class="thematic_bllock_img">
+                <div class="thematic_block_img">
                     <img src="./imgs/img_new_4.png" alt="tematic_img">
                 </div>
 
                 <div class="thematic_item">
-                    <button>John smash</button>
+                    <a class="btn_orange" href="#">John smash</a>
                     <span>.5min</span>
                     <h6>Lorem Ipsum is simply dummy text dummy text ?</h6>
                 </div>
@@ -169,12 +169,12 @@
             </div>
             <div class="thematic_block">
 
-                <div class="thematic_bllock_img">
+                <div class="thematic_block_img">
                     <img src="./imgs/img_new_5.png" alt="tematic_img">
                 </div>
 
                 <div class="thematic_item">
-                    <button>John smash</button>
+                    <a class="btn_blue" href="#">John smash</a>
                     <span>.5min</span>
                     <h6>Lorem Ipsum is simply dummy text dummy text ?</h6>
                 </div>
@@ -183,12 +183,12 @@
 
             <div class="thematic_block">
 
-                <div class="thematic_bllock_img">
+                <div class="thematic_block_img">
                     <img src="./imgs/img_new_6.png" alt="tematic_img">
                 </div>
 
                 <div class="thematic_item">
-                    <button>John smash</button>
+                    <a class="btn_green" href="#">John smash</a>
                     <span>.5min</span>
                     <h6>Lorem Ipsum is simply dummy text dummy text ?</h6>
                 </div>
@@ -197,12 +197,12 @@
 
             <div class="thematic_block">
 
-                <div class="thematic_bllock_img">
+                <div class="thematic_block_img">
                     <img src="./imgs/img_new_7.png" alt="tematic_img">
                 </div>
 
                 <div class="thematic_item">
-                    <button>John smash</button>
+                    <a class="btn_blue" href="#">John smash</a>
                     <span>.5min</span>
                     <h6>Lorem Ipsum is simply dummy text dummy text ?</h6>
                 </div>
@@ -211,12 +211,12 @@
 
             <div class="thematic_block">
 
-                <div class="thematic_bllock_img">
+                <div class="thematic_block_img">
                     <img src="./imgs/img_new_8.png" alt="tematic_img">
                 </div>
 
                 <div class="thematic_item">
-                    <button>John smash</button>
+                    <a class="btn_purple" href="#">John smash</a>
                     <span>.5min</span>
                     <h6>Lorem Ipsum is simply dummy text dummy text ?</h6>
                 </div>
