--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
                 <nav>
                     <ul>
                         <li class="is_active">
-                            <a href="#">Home</a>
+                            <a href="#" target="_blank">Home</a>
                         </li>
                         <li>
-                            <a href="#">About us</a>
+                            <a href="#" target="_blank">About us</a>
                         </li>
                         <li>
-                            <a href="#">Services</a>
+                            <a href="#" target="_blank">Services</a>
                         </li>
                         <li>
-                            <a href="#">News</a>
+                            <a href="./news.html" target="_blank">News</a>
                         </li>
                     </ul>
 
