--- a/news.html
+++ b/news.html
@@ -35,16 +35,16 @@
                 <nav>
                     <ul>
                         <li>
-                            <a href="#">Home</a>
+                            <a href="./index.html" target="_blank">Home</a>
                         </li>
                         <li>
-                            <a href="#">About us</a>
+                            <a href="#" target="_blank">About us</a>
                         </li>
                         <li>
-                            <a href="#">Services</a>
+                            <a href="#" target="_blank">Services</a>
                         </li>
                         <li class="is_active">
-                            <a href="#">News</a>
+                            <a href="#" target="_blank">News</a>
                         </li>
                     </ul>
 
@@ -69,7 +69,7 @@
 
         <h1>Lorem Ipsum is simply dummy text of the printing and.</h1>
 
-        <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </span>
+        <span class="banner_span">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </span>
     </div>
 
     <form class="search">
@@ -81,7 +81,7 @@
 
     <div class="container news">
         <div class="side left">
-            <div class="thematic">
+            <div class="thematic solid">
 
                 <div class="thematic_img">
                     <img src="imgs\img_new_1.png" alt="img">
@@ -98,11 +98,12 @@
                     and scrambled it to make a type specimen book. It has survived not only five centuries,
                 </p>
 
-                <p class="article_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+                <p class="article_text paragrapf">Lorem Ipsum is simply dummy text of the printing and typesetting
+                    industry. </p>
 
             </div>
 
-            <div class="thematic">
+            <div class="thematic solid_last">
 
                 <div class="thematic_img">
                     <img src="./imgs/img_new_9.png" alt="img">
@@ -119,9 +120,6 @@
                     and scrambled it to make a type specimen book. It has survived not only five centuries,
                 </p>
 
-                <h4>Lorem Ipsum</h4>
-
-                <p class="article_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
             </div>
         </div>
 
@@ -225,6 +223,12 @@
         </div>
     </div>
 
+    <div class="container news_part">
+        <h4>Lorem Ipsum</h4>
+
+        <p class="article_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+    </div>
+
     <div class="container">
         <div class="black_part">
             <div>
@@ -240,6 +244,7 @@
             </form>
         </div>
     </div>
+
 
     <footer>
         <div class="container">
