--- a/news.html
+++ b/news.html
@@ -84,7 +84,7 @@
             <div class="thematic solid">
 
                 <div class="thematic_img">
-                    <img src="imgs\img_new_1.png" alt="img">
+                    <img src="./imgs/img_new_1.png" alt="img">
                 </div>
 
                 <a class="thematic_btn" href="#">John smash</a>
